--- a/OEWIO/OEWIO.csproj
+++ b/OEWIO/OEWIO.csproj
@@ -149,8 +149,12 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\jumbotron.css" />
+    <Content Include="Content\offcanvas.css" />
     <Content Include="Content\Template\jumbotron\index.html" />
     <Content Include="Content\Template\jumbotron\jumbotron.css" />
+    <Content Include="Content\Template\offcanvas\index.html" />
+    <Content Include="Content\Template\offcanvas\offcanvas.css" />
+    <Content Include="Content\Template\offcanvas\offcanvas.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -188,6 +192,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\offcanvas.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
@@ -284,6 +289,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Home\Data.cshtml" />
+    <Content Include="Views\Shared\_Layout - Copy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
